flutter-bindings/bls_signatures_ffi/ios/bls/schemes.h

typedef void* CCoreMPL;
typedef CCoreMPL CBasicSchemeMPL;
typedef CCoreMPL CAugSchemeMPL;
typedef CCoreMPL CPopSchemeMPL;
CG1Element CCoreMPLDeriveChildPkUnhardened(const CCoreMPL scheme, const CG1Element sk, const uint32_t index);
bool CCoreMPLAggregateVerify(const CCoreMPL scheme,
                             void** pks,
                             const size_t pkLen,
                             void** msgs,
                             const void* msgLens,
                             const size_t msgLen,
                             const CG2Element sig);
// BasicSchemeMPL
CBasicSchemeMPL NewCBasicSchemeMPL();
bool CBasicSchemeMPLAggregateVerify(CBasicSchemeMPL scheme,
                                    void** pks,
                                    const size_t pksLen,
                                    void** msgs,
                                    const void* msgsLens,
                                    const size_t msgsLen,
                                    const CG2Element sig);
void CBasicSchemeMPLFree(CBasicSchemeMPL scheme);
// AugSchemeMPL
CAugSchemeMPL NewCAugSchemeMPL();
CG2Element CAugSchemeMPLSign(const CAugSchemeMPL scheme, const CPrivateKey sk, const void* msg, const size_t msgLen);
CG2Element CAugSchemeMPLSignPrepend(const CAugSchemeMPL scheme,
                                    const CPrivateKey sk,
                                    const void* msg,
                                    const size_t msgLen,
                                    const CG1Element prepPk);
bool CAugSchemeMPLVerify(const CAugSchemeMPL scheme,
                         const CG1Element pk,
                         const void* msg,
                         const size_t msgLen,
                         const CG2Element sig);
bool CAugSchemeMPLAggregateVerify(const CAugSchemeMPL scheme,
                                  void** pks,
                                  const size_t pksLen,
                                  void** msgs,
                                  const void* msgsLens,
                                  const size_t msgsLen,
                                  const CG2Element sig);
void CAugSchemeMPLFree(CAugSchemeMPL scheme);
// PopSchemeMPL
CPopSchemeMPL NewCPopSchemeMPL();
CG2Element CPopSchemeMPLPopProve(const CPopSchemeMPL scheme, const CPrivateKey sk);
bool CPopSchemeMPLPopVerify(const CPopSchemeMPL scheme, const CG1Element pk, const CG2Element sig);
bool CPopSchemeMPLFastAggregateVerify(const CPopSchemeMPL scheme,
                                      void** pks,
                                      const size_t pksLen,
                                      const void* msgs,
                                      const size_t msgsLen,
                                      const CG2Element sig);
void CPopSchemeMPLFree(CPopSchemeMPL scheme);