flutter-bindings/bls_signatures_ffi/lib/src/blschia.h.dart


  CG1Element CCoreMPLDeriveChildPkUnhardened(
    CCoreMPL scheme,
    CG1Element sk,
    int index,
  ) {
    return _CCoreMPLDeriveChildPkUnhardened(
      scheme,
      sk,
      index,
    );
  }

  late final _CCoreMPLDeriveChildPkUnhardenedPtr = _lookup<
      ffi.NativeFunction<
          CG1Element Function(CCoreMPL, CG1Element,
              ffi.Uint32)>>('CCoreMPLDeriveChildPkUnhardened');
  late final _CCoreMPLDeriveChildPkUnhardened =
      _CCoreMPLDeriveChildPkUnhardenedPtr.asFunction<
          CG1Element Function(CCoreMPL, CG1Element, int)>();

  bool CCoreMPLAggregateVerify(
    CCoreMPL scheme,
    ffi.Pointer<ffi.Pointer<ffi.Void>> pks,
    int pkLen,
    ffi.Pointer<ffi.Pointer<ffi.Void>> msgs,
    ffi.Pointer<ffi.Void> msgLens,
    int msgLen,
    CG2Element sig,
  ) {
    return _CCoreMPLAggregateVerify(
          scheme,
          pks,
          pkLen,
          msgs,
          msgLens,
          msgLen,
          sig,
        ) !=
        0;
  }

  late final _CCoreMPLAggregateVerifyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint8 Function(
              CCoreMPL,
              ffi.Pointer<ffi.Pointer<ffi.Void>>,
              size_t,
              ffi.Pointer<ffi.Pointer<ffi.Void>>,
              ffi.Pointer<ffi.Void>,
              size_t,
              CG2Element)>>('CCoreMPLAggregateVerify');
  late final _CCoreMPLAggregateVerify = _CCoreMPLAggregateVerifyPtr.asFunction<
      int Function(
          CCoreMPL,
          ffi.Pointer<ffi.Pointer<ffi.Void>>,
          int,
          ffi.Pointer<ffi.Pointer<ffi.Void>>,
          ffi.Pointer<ffi.Void>,
          int,
          CG2Element)>();

  CBasicSchemeMPL NewCBasicSchemeMPL() {
    return _NewCBasicSchemeMPL();
  }

  late final _NewCBasicSchemeMPLPtr =
      _lookup<ffi.NativeFunction<CBasicSchemeMPL Function()>>(
          'NewCBasicSchemeMPL');
  late final _NewCBasicSchemeMPL =
      _NewCBasicSchemeMPLPtr.asFunction<CBasicSchemeMPL Function()>();

  bool CBasicSchemeMPLAggregateVerify(
    CBasicSchemeMPL scheme,
    ffi.Pointer<ffi.Pointer<ffi.Void>> pks,
    int pksLen,
    ffi.Pointer<ffi.Pointer<ffi.Void>> msgs,
    ffi.Pointer<ffi.Void> msgsLens,
    int msgsLen,
    CG2Element sig,
  ) {
    return _CBasicSchemeMPLAggregateVerify(
          scheme,
          pks,
          pksLen,
          msgs,
          msgsLens,
          msgsLen,
          sig,
        ) !=
        0;
  }

  late final _CBasicSchemeMPLAggregateVerifyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint8 Function(
              CBasicSchemeMPL,
              ffi.Pointer<ffi.Pointer<ffi.Void>>,
              size_t,
              ffi.Pointer<ffi.Pointer<ffi.Void>>,
              ffi.Pointer<ffi.Void>,
              size_t,
              CG2Element)>>('CBasicSchemeMPLAggregateVerify');
  late final _CBasicSchemeMPLAggregateVerify =
      _CBasicSchemeMPLAggregateVerifyPtr.asFunction<
          int Function(
              CBasicSchemeMPL,
              ffi.Pointer<ffi.Pointer<ffi.Void>>,
              int,
              ffi.Pointer<ffi.Pointer<ffi.Void>>,
              ffi.Pointer<ffi.Void>,
              int,
              CG2Element)>();

  void CBasicSchemeMPLFree(
    CBasicSchemeMPL scheme,
  ) {
    return _CBasicSchemeMPLFree(
      scheme,
    );
  }

  late final _CBasicSchemeMPLFreePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(CBasicSchemeMPL)>>(
          'CBasicSchemeMPLFree');
  late final _CBasicSchemeMPLFree =
      _CBasicSchemeMPLFreePtr.asFunction<void Function(CBasicSchemeMPL)>();

  CAugSchemeMPL NewCAugSchemeMPL() {
    return _NewCAugSchemeMPL();
  }

  late final _NewCAugSchemeMPLPtr =
      _lookup<ffi.NativeFunction<CAugSchemeMPL Function()>>('NewCAugSchemeMPL');
  late final _NewCAugSchemeMPL =
      _NewCAugSchemeMPLPtr.asFunction<CAugSchemeMPL Function()>();

  CG2Element CAugSchemeMPLSign(
    CAugSchemeMPL scheme,
    CPrivateKey sk,
    ffi.Pointer<ffi.Void> msg,
    int msgLen,
  ) {
    return _CAugSchemeMPLSign(
      scheme,
      sk,
      msg,
      msgLen,
    );
  }

  late final _CAugSchemeMPLSignPtr = _lookup<
      ffi.NativeFunction<
          CG2Element Function(CAugSchemeMPL, CPrivateKey, ffi.Pointer<ffi.Void>,
              size_t)>>('CAugSchemeMPLSign');
  late final _CAugSchemeMPLSign = _CAugSchemeMPLSignPtr.asFunction<
      CG2Element Function(
          CAugSchemeMPL, CPrivateKey, ffi.Pointer<ffi.Void>, int)>();

  CG2Element CAugSchemeMPLSignPrepend(
    CAugSchemeMPL scheme,
    CPrivateKey sk,
    ffi.Pointer<ffi.Void> msg,
    int msgLen,
    CG1Element prepPk,
  ) {
    return _CAugSchemeMPLSignPrepend(
      scheme,
      sk,
      msg,
      msgLen,
      prepPk,
    );
  }

  late final _CAugSchemeMPLSignPrependPtr = _lookup<
      ffi.NativeFunction<
          CG2Element Function(CAugSchemeMPL, CPrivateKey, ffi.Pointer<ffi.Void>,
              size_t, CG1Element)>>('CAugSchemeMPLSignPrepend');
  late final _CAugSchemeMPLSignPrepend =
      _CAugSchemeMPLSignPrependPtr.asFunction<
          CG2Element Function(CAugSchemeMPL, CPrivateKey, ffi.Pointer<ffi.Void>,
              int, CG1Element)>();

  bool CAugSchemeMPLVerify(
    CAugSchemeMPL scheme,
    CG1Element pk,
    ffi.Pointer<ffi.Void> msg,
    int msgLen,
    CG2Element sig,
  ) {
    return _CAugSchemeMPLVerify(
          scheme,
          pk,
          msg,
          msgLen,
          sig,
        ) !=
        0;
  }

  late final _CAugSchemeMPLVerifyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint8 Function(CAugSchemeMPL, CG1Element, ffi.Pointer<ffi.Void>,
              size_t, CG2Element)>>('CAugSchemeMPLVerify');
  late final _CAugSchemeMPLVerify = _CAugSchemeMPLVerifyPtr.asFunction<
      int Function(
          CAugSchemeMPL, CG1Element, ffi.Pointer<ffi.Void>, int, CG2Element)>();

  bool CAugSchemeMPLAggregateVerify(
    CAugSchemeMPL scheme,
    ffi.Pointer<ffi.Pointer<ffi.Void>> pks,
    int pksLen,
    ffi.Pointer<ffi.Pointer<ffi.Void>> msgs,
    ffi.Pointer<ffi.Void> msgsLens,
    int msgsLen,
    CG2Element sig,
  ) {
    return _CAugSchemeMPLAggregateVerify(
          scheme,
          pks,
          pksLen,
          msgs,
          msgsLens,
          msgsLen,
          sig,
        ) !=
        0;
  }

  late final _CAugSchemeMPLAggregateVerifyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint8 Function(
              CAugSchemeMPL,
              ffi.Pointer<ffi.Pointer<ffi.Void>>,
              size_t,
              ffi.Pointer<ffi.Pointer<ffi.Void>>,
              ffi.Pointer<ffi.Void>,
              size_t,
              CG2Element)>>('CAugSchemeMPLAggregateVerify');
  late final _CAugSchemeMPLAggregateVerify =
      _CAugSchemeMPLAggregateVerifyPtr.asFunction<
          int Function(
              CAugSchemeMPL,
              ffi.Pointer<ffi.Pointer<ffi.Void>>,
              int,
              ffi.Pointer<ffi.Pointer<ffi.Void>>,
              ffi.Pointer<ffi.Void>,
              int,
              CG2Element)>();

  void CAugSchemeMPLFree(
    CAugSchemeMPL scheme,
  ) {
    return _CAugSchemeMPLFree(
      scheme,
    );
  }

  late final _CAugSchemeMPLFreePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(CAugSchemeMPL)>>(
          'CAugSchemeMPLFree');
  late final _CAugSchemeMPLFree =
      _CAugSchemeMPLFreePtr.asFunction<void Function(CAugSchemeMPL)>();

  CPopSchemeMPL NewCPopSchemeMPL() {
    return _NewCPopSchemeMPL();
  }

  late final _NewCPopSchemeMPLPtr =
      _lookup<ffi.NativeFunction<CPopSchemeMPL Function()>>('NewCPopSchemeMPL');
  late final _NewCPopSchemeMPL =
      _NewCPopSchemeMPLPtr.asFunction<CPopSchemeMPL Function()>();

  CG2Element CPopSchemeMPLPopProve(
    CPopSchemeMPL scheme,
    CPrivateKey sk,
  ) {
    return _CPopSchemeMPLPopProve(
      scheme,
      sk,
    );
  }

  late final _CPopSchemeMPLPopProvePtr = _lookup<
          ffi.NativeFunction<CG2Element Function(CPopSchemeMPL, CPrivateKey)>>(
      'CPopSchemeMPLPopProve');
  late final _CPopSchemeMPLPopProve = _CPopSchemeMPLPopProvePtr.asFunction<
      CG2Element Function(CPopSchemeMPL, CPrivateKey)>();

  bool CPopSchemeMPLPopVerify(
    CPopSchemeMPL scheme,
    CG1Element pk,
    CG2Element sig,
  ) {
    return _CPopSchemeMPLPopVerify(
          scheme,
          pk,
          sig,
        ) !=
        0;
  }

  late final _CPopSchemeMPLPopVerifyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint8 Function(CPopSchemeMPL, CG1Element,
              CG2Element)>>('CPopSchemeMPLPopVerify');
  late final _CPopSchemeMPLPopVerify = _CPopSchemeMPLPopVerifyPtr.asFunction<
      int Function(CPopSchemeMPL, CG1Element, CG2Element)>();

  bool CPopSchemeMPLFastAggregateVerify(
    CPopSchemeMPL scheme,
    ffi.Pointer<ffi.Pointer<ffi.Void>> pks,
    int pksLen,
    ffi.Pointer<ffi.Void> msgs,
    int msgsLen,
    CG2Element sig,
  ) {
    return _CPopSchemeMPLFastAggregateVerify(
          scheme,
          pks,
          pksLen,
          msgs,
          msgsLen,
          sig,
        ) !=
        0;
  }

  late final _CPopSchemeMPLFastAggregateVerifyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint8 Function(
              CPopSchemeMPL,
              ffi.Pointer<ffi.Pointer<ffi.Void>>,
              size_t,
              ffi.Pointer<ffi.Void>,
              size_t,
              CG2Element)>>('CPopSchemeMPLFastAggregateVerify');
  late final _CPopSchemeMPLFastAggregateVerify =
      _CPopSchemeMPLFastAggregateVerifyPtr.asFunction<
          int Function(CPopSchemeMPL, ffi.Pointer<ffi.Pointer<ffi.Void>>, int,
              ffi.Pointer<ffi.Void>, int, CG2Element)>();

  void CPopSchemeMPLFree(
    CPopSchemeMPL scheme,
  ) {
    return _CPopSchemeMPLFree(
      scheme,
    );
  }

  late final _CPopSchemeMPLFreePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(CPopSchemeMPL)>>(
          'CPopSchemeMPLFree');
  late final _CPopSchemeMPLFree =
      _CPopSchemeMPLFreePtr.asFunction<void Function(CPopSchemeMPL)>();
}

class __fsid_t extends ffi.Struct {
  @ffi.Array.multi([2])
  external ffi.Array<ffi.Int32> __val;
}

abstract class idtype_t {
  static const int P_ALL = 0;
  static const int P_PID = 1;
  static const int P_PGID = 2;
}

class div_t extends ffi.Struct {
  @ffi.Int32()
  external int quot;

  @ffi.Int32()
  external int rem;
}

class ldiv_t extends ffi.Struct {
  @ffi.Int64()
  external int quot;

  @ffi.Int64()
  external int rem;
}

class lldiv_t extends ffi.Struct {
  @ffi.Int64()
  external int quot;

  @ffi.Int64()
  external int rem;
}

typedef size_t = ffi.Uint64;

class __sigset_t extends ffi.Struct {
  @ffi.Array.multi([16])
  external ffi.Array<ffi.Uint64> __val;
}

class timeval extends ffi.Struct {
  @__time_t()
  external int tv_sec;

  @__suseconds_t()
  external int tv_usec;
}

typedef __time_t = ffi.Int64;
typedef __suseconds_t = ffi.Int64;

class timespec extends ffi.Struct {
  @__time_t()
  external int tv_sec;

  @__syscall_slong_t()
  external int tv_nsec;
}

typedef __syscall_slong_t = ffi.Int64;

class fd_set extends ffi.Struct {
  @ffi.Array.multi([16])
  external ffi.Array<__fd_mask> __fds_bits;
}

typedef __fd_mask = ffi.Int64;

class __pthread_internal_list extends ffi.Struct {
  external ffi.Pointer<__pthread_internal_list> __prev;

  external ffi.Pointer<__pthread_internal_list> __next;
}

class __pthread_internal_slist extends ffi.Struct {
  external ffi.Pointer<__pthread_internal_slist> __next;
}

class __pthread_mutex_s extends ffi.Struct {
  @ffi.Int32()
  external int __lock;

  @ffi.Uint32()
  external int __count;

  @ffi.Int32()
  external int __owner;

  @ffi.Uint32()
  external int __nusers;

  @ffi.Int32()
  external int __kind;

  @ffi.Int16()
  external int __spins;

  @ffi.Int16()
  external int __elision;

  external __pthread_list_t __list;
}

typedef __pthread_list_t = __pthread_internal_list;

class __pthread_rwlock_arch_t extends ffi.Struct {
  @ffi.Uint32()
  external int __readers;

  @ffi.Uint32()
  external int __writers;
